# moveit_open_manipulator_x

./: .setup_assistant  CMakeLists.txt  moveit_open_manipulator_x.xml  package.xml
config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  open_manipulator_x.ros2_control.xacro  open_manipulator_x.srdf  open_manipulator_x.urdf.xacro  ros2_controllers.yaml
controller/: omx_controller.cpp
controller/include/moveit_open_manipulator_x/: omx_controller.hpp
hardware/: omx_hardware.cpp
hardware/include/moveit_open_manipulator_x/: omx_hardware.hpp
launch/: bringup.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  open_manipulator_control.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/: send_trajectory.cpp
